bug: suppression de la CSS word-wrap: break-word; sur la classe "text"
git-svn-id: svn://svn.code.sf.net/p/mediboard/code/trunk@17563 a21d6be2-e512-0410-a060-91f5a2946631

--- a/style/mediboard/main.css
+++ b/style/mediboard/main.css
@@ -59,7 +59,7 @@ th.text,
 legend.text,
 div.text {
   white-space: normal !important;
-  word-wrap: break-word;
+  /*word-wrap: break-word;*/
 }
 
 td.compact,
